--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "cli": "^1.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
