--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.41",
+    "dotenv": "^16.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
   },
@@ -20,6 +22,7 @@
     "cli": "^1.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "tsc": "^2.0.4",
